# ModernRobotics

./: .gitignore
mr_interface_pkg/: CMakeLists.txt  package.xml
mr_interface_pkg/action/: MoveArm.action
mr_pkg/: CMakeLists.txt  package.xml
mr_pkg/launch/: OpenArm.launch.py  view_ur5.launch.py
mr_pkg/rviz/: view_ur5.rviz
mr_pkg/src/: exe8.cpp  exe9_actionC.cpp  exe9_actionS.cpp  mr_h.h  node5.cpp  ur5.h
mr_pkg/urdf/: arm_xacro.urdf  ur5.urdf
